syntax = "proto3";
package assets.transactions.mint;

import "gogoproto/gogo.proto";

message TransactionRequest {
  option (gogoproto.goproto_getters) = false;

  string from = 1;
  string from_id = 2;
  string to_id = 3;
  string classification_id = 4;
  string immutable_meta_properties = 5;
  string immutable_properties = 6;
  string mutable_meta_properties = 7;
  string mutable_properties = 8;
}