syntax = "proto3";
package classifications;

import "gogoproto/gogo.proto";
import "modules/classifications/internal/mappable/mappable.v1.proto";
import "schema/parameters/base/parameterList.v1.proto";

message Genesis {
  option (gogoproto.goproto_getters) = false;

  repeated Mappable mappables = 1;
  parameters.ParameterList parameterList = 2;
}